# imagingsuite

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  LibReadme.txt  README.md  ReferenceImageCorrection.cpp  ReferenceImageCorrection.h  UnpublishedImagingAlgorithms.pro  bblognormdlg.cpp  bblognormdlg.h  bblognormdlg.ui  builder.sh  cleanbuildfolders.bat  cleanbuildfolders.sh  conanfile.py  conanfile.txt  copy_dlls.bat  copy_dylibs.sh  custom_filter_dialog.cpp  custom_filter_dialog.py  deployimagingtool_mac.sh  deployimagingtool_ubuntu.sh  detectorlagcorrection.cpp  detectorlagcorrection.h  dummy_file.txt  importTest.py  instructions.md  licence_template_kiptool.txt  pixi.toml  pyproject.toml  release_history.md  robustlognormdlg.cpp  robustlognormdlg.h  robustlognormdlg.ui  unpublishedimagingalgorithms.cpp  windowsbuild.md
GUI/qt/QtAddons/: CMakeLists.txt  QtAddons.pro  QtAddons_global.h  callout.cpp  callout.h  comparevolumeviewer.cpp  comparevolumeviewer.h  comparevolumeviewer.ui  facestyles.cpp  facestyles.h  imagepainter.cpp  imagepainter.h  imageviewerinfodialog.cpp  imageviewerinfodialog.h  imageviewerinfodialog.ui  imageviewerwidget.cpp  imageviewerwidget.h  imgviewerprofiledialog.cpp  imgviewerprofiledialog.h  imgviewerprofiledialog.ui  loggingdialog.cpp  loggingdialog.h  loggingdialog.ui  plotcursor.cpp  plotcursor.h  plotpainter.cpp  plotpainter.h  plotter.cpp  plotter.h  plotwidget.cpp  plotwidget.h  plotwidget.ui  qglyphs.cpp  qmarker.cpp  qmarker.h  qtlogviewer.cpp  qtlogviewer.h  qtlogviewer.ui  qtlogviewer_old.cpp  reportgeneratorbase.cpp  (+19 more)
GUI/qt/QtImaging/: CMakeLists.txt  QtImaging.pro  pixelsizedlg.cpp  pixelsizedlg.h  pixelsizedlg.ui  qtimaging.cpp  qtimaging.h  qtimaging_global.h
GUI/qt/QtModuleConfigure/: AddModuleDialog.cpp  AddModuleDialog.h  ApplicationBase.cpp  ApplicationBase.h  CMakeLists.txt  ConfiguratorDialogBase.cpp  ConfiguratorDialogBase.h  ModuleConfigurator.cpp  ModuleConfigurator.h  ModuleFilterProxyModel.cpp  ModuleFilterProxyModel.h  ModuleManagerWidget.h  ModuleManagerWidget2.cpp  ModuleManagerWidget2.h  ParameterManagerWidget.cpp  QListWidgetModuleItem.h  QtModuleConfigure.pro  QtModuleConfigure_global.h  applicationconfigdialog.cpp  applicationconfigdialog.h  applicationconfigdialog.ui  modulechainconfiguratorwidget.cpp  modulechainconfiguratorwidget.h  qtmoduleconfigure.cpp  qtmoduleconfigure.h  singlemoduleconfiguratorwidget.cpp  singlemoduleconfiguratorwidget.h  singlemodulesettingsdialog.cpp  singlemodulesettingsdialog.h  singlemodulesettingsdialog.ui  stdafx.cpp  stdafx.h  targetver.h
GUI/qt/WidgetTests/: CMakeLists.txt  WidgetTests.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
applications/CLI/muhrecCLI/: CMakeLists.txt  main.cpp  muhrecCLI.pro  muhreccli.cpp  muhreccli.h  stdafx.cpp  stdafx.h
applications/CLI/verticalslicer/: CMakeLists.txt  deployverticalslicer_mac.sh  deployverticalslicer_win.bat  main.cpp  verticalslicer.pro
applications/imageviewer/: CMakeLists.txt  README.md  copy_dlls.bat  copy_dylibs.sh
applications/imageviewer/imageviewer/: imageviewer.pro  saveasdialog.cpp  saveasdialog.h  saveasdialog.ui  viewer_icon.icns  viewer_icon.rc  viewermainwindow.cpp  viewermainwindow.h  viewermainwindow.ui
applications/muhrec/: CMakeLists.txt  copy_dylibs.sh  deploymuhrec_mac.sh  deploymuhrec_mac_debug.sh  deploymuhrec_ubuntu.sh  deploymuhrec_ubuntu_withQT.sh  deploymuhrec_win.bat  package_mac.sh  package_ubuntu.sh
applications/muhrec/Resources/: defaults_linux.xml  defaults_mac.xml  defaults_windows.xml
applications/muhrec/proc_scripts/: batch_runner.py  goldenbatch.py  projlistmaker.py  recon_roots.xml  recon_task_list.json  recon_task_template.json
applications/muhrec/scripts/: AxisTilt.ipynb  CurrentRecon.xml  PerformanceRecon.xml  README.md  ReconstructionTiming.ipynb  makeprojections.py  muhrec  performance.py  recontiming128-1024.json  recontiming128-1024_20210208.json
applications/muhrec/src/: MuhrecInteractor.cpp  MuhrecInteractor.h  PreProcModuleConfigurator.cpp  PreProcModuleConfigurator.h  ReconReport.cpp  ReconReport.h  configuregeometrydialog.cpp  configuregeometrydialog.h  configuregeometrydialog.ui  dialogtoobig.ui  fileconversiondialog.cpp  fileconversiondialog.h  fileconversiondialog.ui  findskiplistdialog.cpp  findskiplistdialog.h  findskiplistdialog.ui  globalsettingsdialog.cpp  globalsettingsdialog.h  globalsettingsdialog.ui  main.cpp  moduleconfigprogressdialog.cpp  moduleconfigprogressdialog.h  moduleconfigprogressdialog.ui  muhrec.pro  muhrec_icon.rc  muhrecmainwindow.cpp  muhrecmainwindow.h  muhrecmainwindow.ui  piercingpointdialog.cpp  piercingpointdialog.h  piercingpointdialog.ui  preferencesdialog.cpp  preferencesdialog.ui  recondialog.cpp  recondialog.h  referencefiledlg.cpp  referencefiledlg.ui  tiltwarningdialog.cpp  tiltwarningdialog.h  tiltwarningdialog.ui  (+3 more)
core/: CMakeLists.txt  README.md
core/ModuleConfig/src/: ConfigBase.cpp  ProcessModuleBase.cpp  stdafx.cpp
core/ModuleConfig/testModuleConfig/: tst_configbasetest.cpp
core/ReaderGUI/: ReaderGUI.pro  readergui.h
core/algorithms/: CMakeLists.txt  TestBindings.ipynb  copydeps.sh  copydeps_so.sh
core/algorithms/AdvancedFilters/: AdvancedFilters.pro  CMakeLists.txt  ISSfilter.h  ISSfilter2D.h  ISSfilterOrig3D.h  ISSfilterQ3D.h  ISSfilterQ3D.hpp  ISSfilterQ3Dp.h  ISSfilterQ3Dp.hpp  NonLinDiffAOS.h  advancedfilterexception.cpp  advancedfilterexception.h  advancedfilters.cpp  advancedfilters.h  advancedfilters_global.h  diff_filterbase.h  filterenums.cpp  filterenums.h  lambdaest.h  nonlocalmeans.cpp  nonlocalmeans.h  nonlocalmeans.hpp  nonlocalmeans.txt  pybinder.cpp  (+2 more)
core/algorithmsBundle/: algorithmsBundle.pro
core/kipl/: builder.sh  maclibs_readme.txt
core/kiplBundle/: kiplBundle.pro
core/modules/: CMakeLists.txt
core/modulesBundle/: modulesBundle.pro
frameworks/tomography/: CMakeLists.txt  TomoBackProj.pro  TomoFramework.pro  TomoPreProc.pro  buildinstructions.md  nexuslinkage.sh
package/: README.md  pyproject.toml  setup.py
package/pymuhrec/: __init__.py
(+2909 files in other folders)
