[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymuhrec"
authors = [{name = "Anders Kaestner"}]
description = "pymuhrec package"
version = "0.0.1"
dependencies = [
    "astropy",
    "numpy",
    "scipy",
    "tqdm",
    "scikit-image",
    "jupyter"
]

[tool.setuptools.packages.find]
where = ["."]


[tool.setuptools.package-data]
pymuhrec = ["*.dll", "*.pyd", "*.so*", "*.dylib"]

#[tool.cibuildwheel]
#build = 'cp312*'
