[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymuhrec"
authors = [
    {name = "Anders Kaestner", email = "anders.kaestner@psi.ch"},
]
maintainers = [
    {name = "Anders Kaestner", email = "anders.kaestner@psi.ch"},
    {name = "Christian Dam Vedel", email = "christian.vedel@ess.eu"}, 
]
description = "Python package for tomographic reconstruction based"
version = "1.0.0"
dependencies = [
    "astropy",
    "numpy",
    "scipy",
    "tqdm",
    "scikit-image",
    "jupyter",
    "matplotlib"
]
requires-python = " >= 3.9"
readme = "README.md"
keywords = ["tomography", "reconstruction", "psi", "ess", "image processing", "neutron imaging", "computed tomography", "denoising"]
classifiers = [
    "Development Status :: 4 - Beta",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Intended Audience :: Science/Research",

    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",

    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://neutronimaging.github.io/"
Documentation = "https://github.com/neutronimaging/imagingsuite/wiki/User-manual-PyBindings"
Repository = "https://github.com/neutronimaging/imagingsuite"
Issues = "https://github.com/neutronimaging/imagingsuite/issues"

[tool.setuptools.packages.find]
where = ["."]


[tool.setuptools.package-data]
pymuhrec = ["*.dll", "*.pyd", "*.so*", "*.dylib"]

